[package]
name = "rust-brute-force-caesar"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jsgthb/rust-brute-force-caesar-cipher"
authors = ["Jeff Schaack"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.2"